# libvmod-urlcode

./: .gitignore  .travis.yml  CHANGES.rst  Makefile.am  README.rst  autogen.sh  configure.ac
.github/workflows/: main.yml
redhat/: vmod-urlcode.spec
src/: Makefile.am  vmod_urlcode.c  vmod_urlcode.vcc
src/tests/: urlcode01.vtc
